--- a/style.css
+++ b/style.css
@@ -5,7 +5,26 @@ body {
     width: 100vw;
     overflow: hidden;
     background-color: black;
-    --text-color: darkorange;
+    --text-color: white;
+    --second-color: #939393;
+    --special-color: #fe75fe;
+    --small-font: 0.85em;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+}
+
+.white {
+    color: white !important;
+}
+
+h2 {
+    font-size: 1.4em;
+    font-weight: 300;
+}
+
+h3 {
+    font-size: 1em;
+    font-weight: 300;
 }
 
 button,
@@ -22,16 +41,14 @@ button,
 
 #game-title {
     position: absolute;
-    color: var(--text-color);
-    font-family: monospace;
+    text-align: center;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    font-size: 2em;
-    text-shadow: 4px 3px #900202;
 }
 
-.intro-circle {
+.intro-circle,
+.intro-circle-start {
     width: 10vh;
     height: 10vh;
     border-radius: 50%;
@@ -62,22 +79,27 @@ button,
 }
 
 .intro-circle:nth-child(1) {
-    background: linear-gradient(45deg, hsla(16, 100%, 50%, 1), #dcff0000) !important;
+    background: linear-gradient(45deg, #fe75fe, transparent) !important;
     transform: translate3d(50vw, 7vh, 0px) translateX(-50%);
 }
 
+.intro-circle-start {
+    margin-right: 102px;
+    background: linear-gradient(45deg, #fe75fe, transparent) !important;
+}
+
 .intro-circle:nth-child(2) {
-    background: linear-gradient(45deg, #ff0000, transparent) !important;
+    background: linear-gradient(45deg, transparent, #fe75fe) !important;
     transform: translate3d(50vw, 25vh, 0px) translateX(-50%);
 }
 
 .intro-circle:nth-child(3) {
-    background: linear-gradient(45deg, #ff0000, transparent) !important;
+    background: linear-gradient(45deg, #fe75fe, transparent) !important;
     transform: translate3d(50vw, 65vh, 0px) translateX(-50%);
 }
 
 .intro-circle:nth-child(4) {
-    background: linear-gradient(45deg, hsla(16, 100%, 50%, 1), #dcff0000) !important;
+    background: linear-gradient(45deg, transparent, #fe75fe) !important;
     transform: translate3d(50vw, 83vh, 0px) translateX(-50%);
 }
 
@@ -86,6 +108,18 @@ button,
 #game {
     outline: none;
     opacity: 1;
+}
+
+.start-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3em;
+    cursor: pointer;
+}
+
+.start-button .title {
+    position: relative;
 }
 
 #progress-bar {
@@ -98,7 +132,7 @@ button,
     height: 100%;
     width: 100%;
     position: absolute;
-    background: linear-gradient(to right, #ebbd00, #f16e00);
+    background: linear-gradient(90deg, #dcff0000, #fe75fe) !important;
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
     transition: 1s linear;
@@ -106,33 +140,57 @@ button,
     pointer-events: none;
 }
 
+.arrow-round {
+    align-items: baseline !important;
+    top: 30px !important;
+    padding-right: 0 !important;
+    right: 30px !important;
+    height: 70px !important;
+    width: 70px;
+}
+
+#skip-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1.5px solid var(--special-color);
+    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+#next-song {
+    font-size: var(--small-font);
+    opacity: 1;
+    display: flex;
+    align-items: center;
+    top: 50%;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: 200;
+    text-align: center;
+}
+
+.skip {
+    transform: none !important;
+    top: 0 !important;
+    left: 0 !important;
+}
+
+
+/* #arrow with skip button */
+
 #arrow {
+    display: flex;
+    align-items: center;
     position: fixed;
     top: 0;
     right: 0;
     height: 10vh;
+    padding-right: 11px;
     color: var(--text-color);
-    display: flex;
-}
-
-#skip-icon {
-    padding-right: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5em;
-    font-family: monospace;
-    font-weight: 800;
-}
-
-#next-song {
-    opacity: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: monospace;
-    font-size: 1.4em;
-    padding-right: 0.5em;
 }
 
 #sort-bar {
@@ -146,11 +204,10 @@ button,
 
 #sort-bar>div {
     position: relative;
+    font-weight: 200;
     width: 24%;
     height: 100%;
     color: var(--text-color);
-    font-size: 1.5em;
-    font-family: sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -230,7 +287,7 @@ button,
     margin: auto;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    background-color: green;
+    background-color: none;
     cursor: pointer;
     transition: 0.6s ease-out;
     transform: scale(0);
@@ -270,7 +327,6 @@ button,
     height: 100vh;
     width: 100vw;
     opacity: 0.8;
-    font-family: Arial, Helvetica, sans-serif;
     color: var(--text-color);
     z-index: 1;
     font-weight: 100;
@@ -282,15 +338,17 @@ button,
     text-align: center;
 }
 
+.modaltext {
+    margin-top: 0.5em;
+}
+
 #modaltext {
     user-select: none;
-    line-height: 1.5em;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 1.5em;
-    white-space: wrap;
-    padding: 10%;
+    padding-left: 3em;
+    padding-right: 3em;
 }
 
 .draggable-source--is-dragging {
@@ -309,7 +367,6 @@ button,
 
 #info-box {
     opacity: 0;
-    ;
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -317,24 +374,55 @@ button,
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: monospace;
     transition: 0.5s ease-out;
 }
 
 .cover {
-    margin-top: 1em;
+    margin-top: 60px;
 }
 
 .cover img {
-    width: 80vw;
+    width: 200px;
     border-radius: 6px;
 }
 
+.song-title,
+.artist {
+    line-height: 1em;
+    color: white;
+}
+
 .correct {
-    font-size: 2em;
+    text-align: center;
+    margin-bottom: -0.5em;
 }
 
 .title {
-    font-size: 1.3em;
-    margin-bottom: 0.5em;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    color: var(--second-color);
+    font-weight: 200;
+}
+
+.emoji {
+    position: absolute;
+    height: 34px;
+    width: 34px;
+    animation: falling 2.3s linear;
+}
+
+@keyframes rotate {
+    0% {}
+    100% {
+        transform: rotate(-360deg);
+    }
+}
+
+@keyframes falling {
+    0% {
+        top: 0px;
+    }
+    100% {
+        top: 100vh;
+    }
 }
